@@ -11,6 +11,8 @@
 
 * Add derivations between wind speed/direction and zonal/meridional velocity.
 
+* Fixed issue where a point distance of 0 could sometimes result in NaN.
+
 * Updates to S5P L2, GOME/GOME-2 L2, and ECMWF GRIB product ingestions.
 
 1.3 2018-07-05
